# gokapiautomaticcleaner

./: README.md  pyproject.toml
gokapiautomaticcleaner/: gokapiautomaticcleaner.py
