[tool.poetry]
name = "gokapiautomaticcleaner"
version = "0.1.0"
description = ""
authors = ["Marcel Keßler <marcel.kessler@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
